# motor_test

./: .gitignore  CMakeLists.txt  Makefile  README.md  current_loop.m  motor_control.cpp  motor_control.h  timer_control.h
beigo_test/: README.md  motor_control.cc
beigo_test/examples/: motor_control  motor_control.h
cyber_test/include/: timer.h
cyber_test/scripts/: CyberGear_Test.py  DrEmpower_CyberGear.py  DrEmpower_can.py
cyber_test/spi_can/: cyber_spi.cc  cyber_spi.h  motor_spi.cc  motor_spi.h
cyber_test/test/: cyber_spi_test.cc  motor_spi_test.cc  motor_uart_test.cc
cyber_test/uart_can/: motor_uart.cc  motor_uart.h
examples/: motor_control.cpp
plot/: current_loop.m  data.txt
